# pantab

./: .clang-tidy  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  NEWS.rst  README.md  TABLEAU_HYPER_LICENSE.txt  asv.conf.json  azure-pipelines.yml  docker-compose.yml  environment.yml  hyper_db_DXkzSGfi  manylinux_build.sh  meson.build  pixi.toml  pyproject.toml  setup.cfg  setup.py  test.hyper
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi_publish.yml  pythonpackage.yml  pythonpublish.yml  unit-test.yml  wheels.yml
benchmarks/: benchmarks.py  custom.py  test.hyper
ci/docker/: pantab-lint.dockerfile
ci/scripts/: lint.sh  lint_check.sh
doc/: Makefile  make.bat  requirements.txt
doc/source/: api.rst  caveats.rst  changelog.rst  common_issues.rst  conf.py  examples.rst  index.rst  support.rst
newsfragments/: 280.feat  285.feature  287.fix  291.fix
pantab/: __init__.py  _compat.py  _hyper_util.py  _pantab.py  _reader.py  _readermodule.c  _tester.py  _types.py  _writer.py  _writermodule.c  cffi.h  dtypes.c  dtypes.h  pantab.c  pantab.h  tableauhyperapi.h
pantab/newsfragments/: 10.bugfix  111.bugfix  130.feature  14.feature  17.bugfix  19.feature  20.feature  23.feature  34.feature  36.feature  40.bug  48.misc  52.bugfix  56.bugfix  57.bugfix  60.bugfix  66.bugfix  7.feature  77.bugfix  8.feature  83.feature  84.feature  88.bugfix  92.bugfix  94.feature
pantab/src/: CMakeLists.txt  _readermodule.c  cffi.h  numpy_datetime.c  numpy_datetime.h  pantab.c  pantab.cpp  reader.c  reader.h  tableauhyperapi.h  type.c  type.h  writer.c  writer.h
pantab/tests/: conftest.py  dates.hyper  test_flags.py  test_pantab.py  test_reader.py  test_roundtrip.py  test_types.py  test_writer.py
pantab/tests/data/: dates.hyper  geography.hyper  hyper_db  myfile.hyper  non_pantab_writeable.hyper  test.hyper
scripts/: compare.py  generate_non_pantab_writeable.py
src/pantab/: CMakeLists.txt  PostInstall.cmake  __init__.py  _reader.py  _types.py  _writer.py  hyper_process.hpp  libpantab.cpp  libpantab.dll.manifest  libpantab.manifest  libpantab.pyi  numeric_gen.hpp  numpy_datetime.cpp  numpy_datetime.h  pt_tableauhyperapi.manifest  reader.cpp  reader.hpp  tableauhyperapi.manifest  writer.cpp  writer.hpp
src/pantab/tests/: test_reader.py  test_writer.py
subprojects/: nanobind.wrap  tableauhyperapi.wrap
subprojects/packagefiles/tableauhyperapi/: meson.build
tests/: conftest.py  test_decimal.py  test_reader.py  test_roundtrip.py  test_writer.py
